Remove JDBC Deprecation